# Marker

./: meson.build
src/: Marker.vala  MarkerApplication.vala  MarkerDocumentView.vala  MarkerEditor.vala  MarkerEditorWindow.vala  MarkerMarkdown.vala  MarkerPreview.vala  MarkerSettings.vala  MarkerTabbedView.vala  marker-preview.c  marker.c
src/resources/ui/: editor-window.ui
vapi/: README.md  hoedown.vapi
